fix: book appointment conflict error